--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -109,7 +109,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,
-    "outdir": "./dist" 
+    "outDir": "./dist" 
     /* Skip type checking all .d.ts files. */
   },
   "include": ["src"]
