--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "lucide-react": "^0.485.0",
-    "next": "15.2.3",
+    "next": "^16.1.4",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
